# DECTALK_Choir

./: .gitignore  AGENTS.md  README.md  choir.py  choir_gui.py  generateSpectrograms.py  requirements-gui.txt  requirements.txt
choir_gui/: README.md  __init__.py  app.py  import_workflow.py  inspector.py  midi_workflow.py  split_workflow.py
choir_studio/: README.md  index.html  package-lock.json  package.json  vite.config.ts
choir_studio/src-tauri/: Cargo.toml  tauri.conf.json
choir_studio/src-tauri/capabilities/: default.json
choir_studio/src-tauri/resources/runtime_template/: runtime-manifest.placeholder
choir_studio/src-tauri/src/: main.rs
docs/: installation.md  settings-reference.md  song-authoring.md
pyFuncs/: AudioSafety.py  AudioTiming.py  ChoirInspection.py  DectalkDefaults.py  DectalkErrorDetection.py  DectalkStringExport.py  DectalkTrackImport.py  MidiPreview.py  MidiProcessing.py  PhonemeProcessing.py  PitchMapping.py  SettingsSchema.py  SongPaths.py  spectrogramAnimation.py
tests/: test_alignment_note_counts.py  test_audio_safety.py  test_dectalk_error_detection.py  test_dectalk_string_export.py  test_dectalk_track_import.py  test_lyric_source_lifecycle.py  test_midi_preview.py  test_midi_song_import.py  test_midi_track_delete.py  test_midi_track_role_management.py  test_minimum_note_duration.py  test_note_skeleton.py  test_octave_boost_reference.py  test_phoneme_note_allocation.py  test_settings_schema.py  test_spectrogram_settings.py  test_split_polyphonic_midi.py  test_studio_bridge_dispatch.py  test_studio_inspection_serialization.py
(+98 files in other folders)
